--- a/config.json
+++ b/config.json
@@ -38,5 +38,12 @@
         }
       }
     }
+  },
+  "oh-my-zsh": {
+    "users": {
+      "login": "vagrant",
+      "theme": "rachel",
+      "plugins": ["git"]
+    }
   }
 }
